Juliet-June27 4.38pm

--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?131700929"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-master.css?4118941588"/>
-  <link rel="stylesheet" type="text/css" href="css/contact-us.css?4237730304" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/contact-us.css?3984221828" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -53,31 +53,31 @@ var __adobewebfontsappname__ = "muse";
     <div class="SlideShowWidget clearfix colelem" id="slideshowu138"><!-- none box -->
      <div class="popup_anchor" id="u143popup">
       <div class="SlideShowContentPanel clearfix" id="u143"><!-- stack box -->
-       <div class="SSSlide shadow clip_frame clearfix grpelem" id="u148"><!-- image -->
+       <div class="SSSlide clip_frame clearfix grpelem" id="u148"><!-- image -->
         <img class="ImageInclude position_content" id="u148_img" data-src="images/slide.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u300"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u300"><!-- image -->
         <img class="ImageInclude position_content" id="u300_img" data-src="images/slide1.jpg" src="images/blank.gif" alt="" data-width="973" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u320"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u320"><!-- image -->
         <img class="ImageInclude position_content" id="u320_img" data-src="images/slide2.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u340"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u340"><!-- image -->
         <img class="ImageInclude position_content" id="u340_img" data-src="images/slide3.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u360"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u360"><!-- image -->
         <img class="ImageInclude position_content" id="u360_img" data-src="images/slide4.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u380"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u380"><!-- image -->
         <img class="ImageInclude position_content" id="u380_img" data-src="images/slide5.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u400"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u400"><!-- image -->
         <img class="ImageInclude position_content" id="u400_img" data-src="images/slide6.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u420"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u420"><!-- image -->
         <img class="ImageInclude position_content" id="u420_img" data-src="images/slide7.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u440"><!-- image -->
+       <div class="SSSlide invi clip_frame clearfix grpelem" id="u440"><!-- image -->
         <img class="ImageInclude position_content" id="u440_img" data-src="images/slide8.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
       </div>
@@ -92,17 +92,20 @@ var __adobewebfontsappname__ = "muse";
       <div class="clearfix colelem" id="u740-4"><!-- content -->
        <p id="u740-2"><span id="u740">Juliet's Castle Sports Lounge</span></p>
       </div>
-      <div class="clearfix colelem" id="u743-18"><!-- content -->
-       <p id="u743-2">440 16th Ave NE, Calgary Alberta</p>
-       <p id="u743-3">&nbsp;</p>
-       <p id="u743-5">Phone: (403) 276-2866</p>
-       <p id="u743-6">&nbsp;</p>
-       <p id="u743-8">Facebook</p>
-       <p id="u743-9">&nbsp;</p>
-       <p id="u743-11">For band and entertainment inquiries please contact</p>
-       <p id="u743-12">&nbsp;</p>
-       <p id="u743-15">Darcy Clendenning at: <span title="mailto:espdc@shaw.ca">espdc@shaw.ca</span></p>
-       <p>&nbsp;</p>
+      <div class="clearfix colelem" id="pu743-17"><!-- group -->
+       <div class="clearfix grpelem" id="u743-17"><!-- content -->
+        <p id="u743-2">440 16th Ave NE, Calgary Alberta</p>
+        <p id="u743-3">&nbsp;</p>
+        <p id="u743-5">Phone: (403) 276-2866</p>
+        <p id="u743-6">&nbsp;</p>
+        <p id="u743-7">&nbsp;</p>
+        <p id="u743-8">&nbsp;</p>
+        <p id="u743-10">For band and entertainment inquiries please contact</p>
+        <p id="u743-11">&nbsp;</p>
+        <p id="u743-14">Darcy Clendenning at: <span title="mailto:espdc@shaw.ca">espdc@shaw.ca</span></p>
+        <p>&nbsp;</p>
+       </div>
+       <a class="nonblock nontext clip_frame grpelem" id="u751" href="http://www.facebook.com/NirvanaEntertainmentInc" target="_blank"><!-- image --><img class="block" id="u751_img" src="images/fb.png" alt="" data-image-width="34" data-image-height="34"/></a>
       </div>
      </div>
      <div class="grpelem" id="u746"><!-- custom html -->
