--- a/menu.html
+++ b/menu.html
@@ -13,7 +13,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?131700929"/>
   <link rel="stylesheet" type="text/css" href="css/master_b-master.css?4118941588"/>
-  <link rel="stylesheet" type="text/css" href="css/menu.css?328049750" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/menu.css?4196437835" id="pagesheet"/>
   <!-- Other scripts -->
   <script type="text/javascript">
    document.documentElement.className = document.documentElement.className.replace(/\bnojs\b/g, 'js');
@@ -48,39 +48,207 @@
     <div class="SlideShowWidget clearfix colelem" id="slideshowu138"><!-- none box -->
      <div class="popup_anchor" id="u143popup">
       <div class="SlideShowContentPanel clearfix" id="u143"><!-- stack box -->
-       <div class="SSSlide clip_frame clearfix grpelem" id="u148"><!-- image -->
+       <div class="SSSlide shadow clip_frame clearfix grpelem" id="u148"><!-- image -->
         <img class="ImageInclude position_content" id="u148_img" data-src="images/slide.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u300"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u300"><!-- image -->
         <img class="ImageInclude position_content" id="u300_img" data-src="images/slide1.jpg" src="images/blank.gif" alt="" data-width="973" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u320"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u320"><!-- image -->
         <img class="ImageInclude position_content" id="u320_img" data-src="images/slide2.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u340"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u340"><!-- image -->
         <img class="ImageInclude position_content" id="u340_img" data-src="images/slide3.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u360"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u360"><!-- image -->
         <img class="ImageInclude position_content" id="u360_img" data-src="images/slide4.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u380"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u380"><!-- image -->
         <img class="ImageInclude position_content" id="u380_img" data-src="images/slide5.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u400"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u400"><!-- image -->
         <img class="ImageInclude position_content" id="u400_img" data-src="images/slide6.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u420"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u420"><!-- image -->
         <img class="ImageInclude position_content" id="u420_img" data-src="images/slide7.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
-       <div class="SSSlide invi clip_frame clearfix grpelem" id="u440"><!-- image -->
+       <div class="SSSlide invi shadow clip_frame clearfix grpelem" id="u440"><!-- image -->
         <img class="ImageInclude position_content" id="u440_img" data-src="images/slide8.jpg" src="images/blank.gif" alt="" data-width="954" data-height="248"/>
        </div>
       </div>
      </div>
     </div>
     <div class="verticalspacer"></div>
-    <div class="clip_frame colelem" id="u480"><!-- image -->
-     <img class="block" id="u480_img" src="images/hsplit.gif" alt="" data-image-width="1" data-image-height="4"/>
+    <div class="clearfix colelem" id="pu480"><!-- group -->
+     <div class="clip_frame grpelem" id="u480"><!-- image -->
+      <img class="block" id="u480_img" src="images/hsplit.gif" alt="" data-image-width="1" data-image-height="4"/>
+     </div>
+     <div class="clearfix grpelem" id="u764-270"><!-- content -->
+      <p>Appetizers</p>
+      <p>Wraps</p>
+      <p>Sandwiches</p>
+      <p>Pastas</p>
+      <p>Burgers</p>
+      <p>Salads</p>
+      <p>Desserts</p>
+      <p>Pizza Menu</p>
+      <p>Weekly Features</p>
+      <p>Happy Hour</p>
+      <p>Appetizers</p>
+      <p>&nbsp;</p>
+      <p>Beef or Vegetable Samosas</p>
+      <p>4 peices of your choice served with mint sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>4.99</p>
+      <p>French Onion Soup</p>
+      <p>Oven baked onion souptopped with croutons and mozarella cheese.</p>
+      <p>Served with Garlic toast.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>5.99</p>
+      <p>Basket of Fries</p>
+      <p>Your choice of skinny regular or wedge fries.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>5.99</p>
+      <p>Mini Perogies</p>
+      <p>16 perogies sauteed with green onions and bacon bits. Served with sour cream.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>6.99</p>
+      <p>Yam Fries</p>
+      <p>Seasoned Yam fries fried and served with chipotle sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>6.99</p>
+      <p>Basket of Sriracha Cod Bites (12)</p>
+      <p>Bites size pacific cod marinated in spicy sriracha.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>6.99</p>
+      <p>Castle Dog</p>
+      <p>All beef kosher dog, mustard, relish, ketchup and onions served on a bun.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>6.99</p>
+      <p>Poutine</p>
+      <p>Lightly seasoned regular fries smothered in melted mozzarella cheese &amp; gravy.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Chicken Satay Kabobs</p>
+      <p>Spicy satay kabab with choice of peanut or ponzu sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Mac and Cheese</p>
+      <p>Breaded Mac and cheese wedges.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Castle Chips</p>
+      <p>Thin sclied potatoes served with ranch dip.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Pickle Spears</p>
+      <p>Breaded Pickle Spears cooked golden served with southwestern ranch dressing.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Beef Satay Kabobs</p>
+      <p>Spicy Satay kabab with your choice of peanut and ponzu sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Broccoli Cheddar Bites (8)</p>
+      <p>Breaded broccoli and cheddar cooked golden served with dip.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>7.99</p>
+      <p>Chicken Finger and Fries</p>
+      <p>3 chicken tenders lightly breaded and seasoned to perfection.</p>
+      <p>Served with plum sauce or honey mustard.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>8.99</p>
+      <p>Mozzarella Sticks</p>
+      <p>Breaded mozzarella served with marinara sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>8.99</p>
+      <p>Veggie Spring Rolls (8)</p>
+      <p>Served with plum sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>8.99</p>
+      <p>Chicken Dumplings (8)</p>
+      <p>Served with Soya + Chilly Sauce</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>8.99</p>
+      <p>Cheesy Garlic Bread</p>
+      <p>Pizza bread with garlic and cheese oven baked served Marinara Sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>9.99</p>
+      <p>Jalapeno Poppers</p>
+      <p>Spicy breaded poppers served with our sour sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>9.99</p>
+      <p>Chicken Thai Bites</p>
+      <p>Breaded chicken tossed in a Thai chilli sauce.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>9.99</p>
+      <p>Angus Sliders (4)</p>
+      <p>Angus Beef sliders.</p>
+      <p>&nbsp;</p>
+      <p>Add Cheese 1.00</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>9.99</p>
+      <p>Veggie Plate</p>
+      <p>Celery, mushroom, carrots, cauliflower, tomato, broccoli and cucumbers.</p>
+      <p>Served with Ranch.</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>9.99</p>
+      <p>Dry Ribs</p>
+      <p>One pound of meaty boneless rib bits breaded with Juliet′s own recipe.</p>
+      <p>Your choice of assorted flavours or seasoning.</p>
+      <p>&nbsp;</p>
+      <p>9.99</p>
+      <p>Boneless Wings</p>
+      <p>10 pieces of All White Breaded Chicken</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>11.99</p>
+      <p>Ribs and Wings Combo</p>
+      <p>20/20 of each, your choice of flavouring with ranch</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>12.99</p>
+      <p>Nachos</p>
+      <p>Tri coloured tortilla chips smothered with green onions, tomatoes, black olives,</p>
+      <p>green peppers, jalapenos and shredded cheese.</p>
+      <p>Served with sour cream and salsa.</p>
+      <p>Add Chicken or Beef for 3.50</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>14.99</p>
+      <p>Juliets Party Platter</p>
+      <p>A combination of chicken fingers, wings (any flavor), mozza sticks,</p>
+      <p>shrimp, onion rings, dry ribs, samosas and mini perogies</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>19.99</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+      <p>&nbsp;</p>
+     </div>
     </div>
    </div>
   </div>
